  - mac sort moved from GetMACs() to choosemac dialog (sorting local mac 
    adresses with mac adresses received from arpd servers) (Mad Mark)
  - improved status/warning setting and group assigning in customer's nodes
    list - checkbox selection (alec)
  - added nodes groups list popups in customer's nodes list (alec)
  - added possibility to move members of one group to other group (alec)

version 1.11.1 Talus (2007-12-03):

  - added link to customerinfo in title of assignments edition page (alec)
  - fixes in config reload, now at least one host is required (alec)
  - added mb_internal_encoding('UTF-8') call, so we can now use PHP's
    option mbstring.func_overload = 7, added info about mbstring
    extension requirement and recommended settings in documentation (alec)
  - contrib/formularz_przelewu_wplaty: fixed css vulnerability, also
    configuration is readed from database and can be set in UI (alec)
  - excluded groups: don't show excluded groups on filters (alec)
  - excluded groups: works in modules from menu Finances (alec)
  - in Finances -> Raports -> Transfer forms balance value can be entered 
    with . or , sign (alec)
  - invoices list: fixed sorting by items count (alec)
  - fixed SQL query in Mailing (alec)
  - pdf invoices: added page numbers, invoices can have many positions -
    added page breaking, using ezpdf tables (alec)
  - lmsd/payments: added options 'networks', 'customergroups', 
    'numberplan' (alec)
  - added numbering plan filter to Sale Registry report (alec)
  - added customer groups filter to Cash Report (alec)
  - added customer groups filter to Finances/Reports/Transfer Forms (alec)
  - added customer groups and numberng plan filter to 
    Finances/Reports/Invoices  (alec)
  - helpdesk: fixed attachments removing when deleting tickets and 
    messages (alec) 
  - new invoice settlement date checking takes numbering plan into
    consideration (alec)
  - fix: customers assignments addition and edition moved from